fixed pic alignment

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -5,7 +5,7 @@
     overflow: hidden;
     margin: 16px;
     position: relative;
-    width: 250px;
+    width: 260px;
     box-shadow: 0 1px 3px 1px #999, 0 3px 6px #999;
     -webkit-box-shadow: 0 1px 3px 1px #999, 0 3px 6px #999;
     text-align: left;
