--- a/src/components/Wrapper/Wrapper.css
+++ b/src/components/Wrapper/Wrapper.css
@@ -1,5 +1,7 @@
 .wrapper {
     height: 100%;
+    max-width: 1600px;
+    margin: auto;
     display: flex;
     flex-flow: row wrap;
     padding: 50px 10%;
